# tisma-agent-polkit

./: .gitignore  .instructions.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  INSTALL.md  Makefile  PKGBUILD  README.md  TESTING.md  TRANSLATIONS.md  build.rs  i18n.mk  install.sh
.cargo/: config.toml
dbus/: org.tisma.PolkitAgent.xml
i18n/: ca.json  de.json  en.json  es.json  fr.json  pt.json
policies/: org.tisma.policy
src/: i18n.rs  lib.rs  main.rs  polkit.rs
src/ui/: mod.rs  vala_ui.rs
systemd/: tisma-agent-polkit.service
tools/: generate_i18n.py
vala/: localized_dialog.vala.example  polkit_dialog.vala
