[package]
name = "tisma-agent-polkit"
version = "0.1.0"
edition = "2021"

[dependencies]
dbus = "0.9"
dbus-tree = "0.9"
tokio = { version = "1", features = ["full"] }
gtk = "0.18"
gio = "0.18"
glib = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"

[build-dependencies]
pkg-config = "0.3"

[[bin]]
name = "tisma-agent-polkit"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
